public/stylesheets/main.css
@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Slab:wght@500&display=swap');
:root{
    color-scheme: dark light;
    --col1: #123859;
    --col2: #9CD9D3;
    --col3: #D9B23D;
    --col4: #D93425;
    --col5: #911111;
	--col6: #52565c;
    --col7: #def1f0;
    --col8: #065966;
}
.dark_mode{
    background-image: url("../img/night-lighthouse.png"), rgb(30,30,30);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}
.light_mode{
    background: var(--col7);
}
hr {
    display:block;
    border:0px;
    height:calc(2em);
    background-image:url('../img/svg/horizontal_rule.svg');
    background-repeat: no-repeat;
    background-position: center; 
}
html{
    overflow-y: scroll;
    overflow-x: hidden;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

body{
    padding-top:1em;
    /* background:var(--col7); */
}
td {
    vertical-align: baseline;
  }
a{
    color: var(--col1);
    transition: 0.7s;
}
a:visited{
    color: var(--col8);
}
a:hover{
    color: var(--col6);
}
*{
    font-family: 'Lexend',Verdana, Arial,sans-serif;
    scroll-margin-top: 10em;
    color: rgb(5,5,5);
}
small{
    font-weight: 300;
}

input{
    margin-bottom: calc(2em);
}

dt{
    font-weight: bold;
    font-style: italic;
    color: var(--col1);
}

dd{
    margin-bottom: 2em;
}

form{
    width: 100%;
    height: auto;
    /* border: 1px solid black; */
    margin: 0 auto;
}

.navmobile{
    display:none;
  }

nav {
    width: 100%;
    text-align: left;
    background: var(--col6);
    padding: 1em;
    position: fixed;
    color: white;
    top:0;
    left: 0;
    filter: drop-shadow(0 3px 3px rgba(0,0,0, .2));
    z-index: 200;
    height: 6em;
    max-height: 6em;
}

/* nav a, nav button{
  font-size: calc(1em);
  font-weight: 400;
  vertical-align: middle;
} */

article{
    border-bottom: 1px solid black;
    padding: calc(1em);
}
article:last-child{
    border-bottom: 0;
}



.navel, button, input[type=submit], input[type=reset], .linkbutton {
    display: inline-block;
    margin: auto calc(1em);
    text-decoration: none;
    transition: 1s;
    vertical-align: middle;
    background: var(--col2);
    padding: calc(.5em);
    border-radius: 0px;
    color: var(--col1);
    border: 0;
    font-size: 1em;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

button:disabled, input[type=submit]:disabled{
    background: silver;
    color: grey;
}

.navel:hover {
    background: var(--col3);
    /* border-radius: 20px; */
    text-decoration: none;
    transition: .3s;
}
.navel:visited{
    color: var(--col1);
}

.infodd{
    border: 1px solid red;
    width: 10vw;
    z-index: 30;
}

textarea{
    resize: none;
    white-space: pre-wrap;
    padding: calc(1em);
}

p{
    text-indent: 1em;
}

h1, h2, h3, h4{
	font-family: 'Roboto Slab', serif;
    color: var(--col5);
}

li {
    margin-bottom: 1em;
}

footer{
  font-size: 10px;
  font-style: italic;
  position: fixed;
  padding: 5px 5px 0px 5px;
  bottom: 0;
  right: 0;
  width: 20%;
  /* Height of the footer*/
  /* height: 40px; */
  background: silver;
  /* border-radius: 20px 0 0 0; */
}

/* IDs */

/* #logo{
    position: fixed;
    top: 1vh;
    left: 1vh;
} */


#wrapper{
    width: 80vw;
    /* border: 1px solid black; */
    height: 100%;
    min-height: 10vh;
    padding: calc(2em);
    margin: 9vh auto auto auto;
    background: rgba(255,255,255,.4);
}

#wrapper::after{
  content: "";
  clear: both;
  display: table;
}

#blogpopup{
    padding: calc(.5em);
    background: ghostwhite;
    width: 25vw;
    z-index: 4;
    position: absolute;
    border: 1px solid black;
    /* border-radius: 10px; */
}

#logo a{
    color: white;
    text-decoration: none;
    vertical-align: middle;
}

#logoname, #mobilenav{
    color: var(--col7);
	font-family: 'Berkshire Swash','Lobster Two', cursive;
}
#logoname > *, #mobilenav >*, #hamburger > *{
    color: var(--col2);
}

#hamburger > span{
    vertical-align: middle;
}
#subnav ul{
    list-style: none;
}

/* Classes */


.warningbutton{
	font-style: italic;
    font-weight: bold;
    color: var(--col4);
    background: var(--col4);
    color: white;
    border:0;
    padding: calc(1em);
    text-transform: uppercase;
    font-weight: bold;
    transition: .25s;
}
.warningbutton:hover{
    background: red;
	color: white;
}


.grid{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1em;
    width: calc(50vw);
    max-width: calc(50vw);
    flex-wrap: wrap;
}
.grid > *{
    min-width: 10em;
    margin-top: .5em;
}

.parent {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
  }
.child {
    flex: 1 0 21%;
    margin: calc(.5em);
    height: 7em;
    justify-items: center;
    /* background-color: blue; */
  }

.grid > a, .alterbutton, .editbtn, .deletebtn{
    padding: 1em;
    display: inline-block;
    text-align: center;
    text-decoration: none;
    font-weight: bold;
    color: var(--col1);
    flex: 2 0 50%;
    flex-grow: 0;
    /* border-radius: 15px; */
    transition: .2s;
    background: var(--col2);
    max-width: 5em;
    /* width: calc(100% * (1/4) - 5px - 1px); */
}
.grid > a:hover, .alterbutton:hover{
    background: var(--col3);
}

.grid-sm {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    /* border: 1px solid black; */
    padding: .5em;
    width: calc(50vw);
    max-width: calc(50vw);
    flex-wrap: wrap;
}
/* ... */

